--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "commit": "git-cz",
-    "semantic-release": "semantic-release"
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
@@ -32,14 +32,14 @@
   },
   "dependencies": {
     "next": "latest",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@storybook/addon-a11y": "^6.0.27",
@@ -47,33 +47,34 @@
     "@storybook/addon-essentials": "^6.0.27",
     "@storybook/addon-links": "^6.0.27",
     "@storybook/react": "^6.0.27",
-    "@testing-library/react": "^10.0.1",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.5",
-    "@types/react": "^16.9.27",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "babel-jest": "^25.2.3",
+    "@testing-library/react": "^11.2.6",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "commitizen": "^4.2.2",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-react": "^7.19.0",
-    "husky": "^4.2.3",
-    "jest": "^25.2.3",
-    "jest-watch-typeahead": "^0.5.0",
-    "lint-staged": "^10.0.10",
-    "prettier": "^2.0.2",
-    "react-is": "^17.0.1",
-    "typescript": "^3.8.3",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "jest-watch-typeahead": "^0.6.2",
+    "lint-staged": "^10.0.10",
+    "prettier": "^2.2.1",
+    "react-is": "^17.0.1",
+    "typescript": "^4.2.4"
   },
   "config": {
     "commitizen": {
